--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -26,6 +26,7 @@ $colour-map: ( // Creates variables to be used in my map.
     wt-btn-bg-hv-3   : #009B69,
     client           : #A3A8AC,
     star             : #FFA500,
+    ln-title-color   : #333645,
     ln-btn-txt-color : #FFF,
     ln-p-color       : #666,
     footer-txt-color : #FFF,
