--- a/css/style.css
+++ b/css/style.css
@@ -668,14 +668,20 @@ h3 {
 }
 .welcome-to h2 {
   margin-bottom: 40px;
+  margin-top: 0;
 }
 .welcome-to p {
   line-height: 1.875rem;
+  margin-top: 0;
   margin-bottom: 25px;
 }
 .welcome-to a {
   text-decoration: none;
   color: #fff;
+}
+
+.welcome-to-column {
+  padding: 0 12px;
 }
 
 a.strong-paragraph:hover {
@@ -696,7 +702,7 @@ a.strong-paragraph:hover {
 }
 
 .welcome-to-col-1 p {
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .client-quote {
@@ -712,6 +718,7 @@ a.strong-paragraph:hover {
 
 .client {
   font-weight: 600;
+  font-size: 1.1rem;
 }
 
 .welcome-to-btn {
@@ -732,6 +739,18 @@ a.strong-paragraph:hover {
   width: 270.17px;
   height: 57px;
   margin-bottom: 17px;
+  margin-right: 6px;
+}
+@media (min-width: 992px) {
+  .welcome-to-buttons a:first-child {
+    margin-top: 8px;
+  }
+}
+@media (min-width: 1260px) {
+  .welcome-to-buttons a:first-child {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .welcome-to-btn-1 {
@@ -742,6 +761,11 @@ a.strong-paragraph:hover {
 }
 .welcome-to-btn-1:hover {
   background-color: #121318;
+}
+@media (min-width: 992px) {
+  .welcome-to-btn-1 {
+    margin-bottom: 0;
+  }
 }
 
 .welcome-to-btn-2 {
@@ -768,16 +792,30 @@ a.strong-paragraph:hover {
 .star-icon {
   width: 46.84px;
   height: 51px;
+  margin-bottom: 25px;
   fill: #FFA500;
+}
+
+.star {
+  margin-left: 4px;
 }
 
 .welcome-to-row {
   display: flex;
   flex-direction: column;
 }
+@media (min-width: 992px) {
+  .welcome-to-row {
+    flex-direction: row;
+  }
+}
 
 .star-row {
   display: flex;
+}
+
+.welcome-to-column {
+  flex: 1;
 }
 
 .welcome-to-col-1 {
@@ -794,18 +832,11 @@ a.strong-paragraph:hover {
   align-self: flex start;
 }
 
-.welcome-to-buttons {
-  display: flex;
-  flex-direction: column;
-}
-
-.strong-title {
-  display: flex;
-}
-
-.client-quote-author {
-  display: flex;
-  flex-direction: column;
+@media (min-width: 1260px) {
+  .middle-buttons {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .title-padding {
@@ -825,9 +856,9 @@ a.strong-paragraph:hover {
   font-size: 1.625rem;
   line-height: 0;
   font-weight: 600;
-  color: #333645;
   border-bottom: 2px solid transparent;
   text-decoration: none;
+  color: #333645;
 }
 .ln-title-2:hover {
   border-bottom: 2px solid #333645;
@@ -845,16 +876,31 @@ a.strong-paragraph:hover {
   padding-top: 30px;
 }
 
+@media (min-width: 768px) {
+  .it-2 {
+    display: none;
+  }
+}
+@media (min-width: 1260px) {
+  .it-2 {
+    display: initial;
+  }
+}
+
 .block-ln {
   padding: 30px;
 }
 .block-ln h3 {
+  font-size: 1rem;
+  font-weight: bold;
   line-height: 1.5rem;
   margin-top: 0;
   margin-bottom: 15px;
   padding-top: 30px;
 }
 .block-ln span {
+  display: none;
+  margin-left: 5px;
   font-size: 0.85rem;
   text-transform: uppercase;
   color: rgba(51, 54, 69, 0.5);
@@ -866,6 +912,33 @@ a.strong-paragraph:hover {
   margin-bottom: 25px;
   color: #666;
 }
+@media (min-width: 768px) {
+  .block-ln {
+    width: 345px;
+    height: 569px;
+  }
+}
+@media (min-width: 992px) {
+  .block-ln {
+    width: 455px;
+    height: 633px;
+  }
+}
+@media (min-width: 1260px) {
+  .block-ln {
+    width: 370px;
+    height: 589px;
+  }
+}
+
+.it-2 h3 {
+  white-space: nowrap;
+}
+@media (min-width: 1260px) {
+  .it-2 h3 {
+    margin-bottom: 40px;
+  }
+}
 
 .flex-center {
   margin-bottom: 15px;
@@ -873,6 +946,19 @@ a.strong-paragraph:hover {
 
 .hide-small {
   display: none;
+}
+@media (min-width: 768px) {
+  .hide-small {
+    display: initial;
+    padding-top: 50px;
+    padding-bottom: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .hide-medium {
+    display: none;
+  }
 }
 
 .article-link {
@@ -991,6 +1077,23 @@ a.strong-paragraph:hover {
 .flex-center {
   display: flex;
   justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .ln-position {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 768px) {
+  .ln-titles {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
 }
 
 .ln-title-2 {
@@ -1140,9 +1243,14 @@ footer a:hover {
 }
 @media (min-width: 480px) {
   .logo-button {
-    width: 55px;
-    height: 48px;
+    width: 66px;
+    height: 56px;
     padding: 0;
+  }
+}
+@media (min-width: 1260px) {
+  .logo-button {
+    margin: 0 7px 0 0;
   }
 }
 
@@ -1271,8 +1379,25 @@ footer a:hover {
 .footer-bottom-box ul {
   padding-left: 0;
 }
-.footer-bottom-box .license-3 {
+@media (min-width: 768px) {
+  .footer-bottom-box {
+    padding-top: 15px;
+  }
+}
+
+@media (min-width: 768px) {
+  .license-2 {
+    margin-left: 5px;
+  }
+}
+
+.license-3 {
   margin-right: 10px;
+}
+@media (min-width: 768px) {
+  .license-3 {
+    margin-left: 10px;
+  }
 }
 
 .row-group {
