--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -1,6 +1,6 @@
 @forward "layout";
 @forward "header";
-@forward "main-nav";
+@forward "navbar";
 @forward "banner";
 @forward "ourservices";
 @forward "welcometo";
