--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -12,6 +12,8 @@ $breakpoints: ( // Creates variables to be used in my map.
 $colour-map: ( // Creates variables to be used in my map.
     hdr-search-bar   : #555,
     hdr-btn-lines    : #FFF,
+    nav-txt          : #FFF,
+    nav-icon-hv      : #FFF,
     banner-txt       : #FFF,
     banner-btn-hvr   : #E80A42,
     os-btn-txt       : #FFF,
