--- a/css/style.css
+++ b/css/style.css
@@ -225,8 +225,111 @@ h3 {
   align-items: center;
 }
 
-.main-nav {
+.nav-bar {
+  display: none;
+  width: 100%;
   background-color: #333645;
+}
+@media (min-width: 992px) {
+  .nav-bar {
+    display: block;
+  }
+}
+
+.nav-list {
+  margin: 0 0;
+  padding: 0;
+}
+.nav-list a {
+  height: 100%;
+  width: 100%;
+  padding: 19px 0;
+  text-align: center;
+  text-decoration: none;
+  list-style: none;
+  color: #FFF;
+}
+.nav-list span {
+  height: 26px;
+  width: 26px;
+  margin-bottom: 8px;
+}
+
+.nav-icon {
+  font-size: 1.25rem;
+  height: 28px;
+  width: 28px;
+}
+
+.nav-software-icon {
+  color: #67809F;
+}
+
+.nav-it-icon {
+  fill: #4183D7;
+}
+
+.nav-digital-icon {
+  fill: #2ECC71;
+}
+
+.nav-telecoms-icon {
+  color: #D64541;
+}
+
+.nav-web-icon {
+  color: #926FB1;
+}
+
+.nav-security-icon {
+  fill: #F62459;
+}
+
+.nav-training-icon {
+  fill: #CE4125;
+}
+
+.nav-software:hover {
+  background-color: #67809F;
+}
+
+.nav-it:hover {
+  background-color: #4183D7;
+}
+
+.nav-digital:hover {
+  background-color: #2ECC71;
+}
+
+.nav-telecoms:hover {
+  background-color: #D64541;
+}
+
+.nav-web:hover {
+  background-color: #926FB1;
+}
+
+.nav-security:hover {
+  background-color: #F62459;
+}
+
+.nav-training:hover {
+  background-color: #CE4125;
+}
+
+.nav-bar .container {
+  display: flex;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+}
+.nav-list .nav-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .banner {
@@ -236,6 +339,7 @@ h3 {
   background-size: cover;
   position: relative;
   background-position: center;
+  background-repeat: no-repeat;
   z-index: 0;
 }
 .banner img {
@@ -248,6 +352,11 @@ h3 {
   margin-bottom: 1.25rem;
   color: #FFF;
 }
+@media (min-width: 992px) {
+  .banner h1 {
+    font-size: 4rem;
+  }
+}
 .banner p {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -255,13 +364,18 @@ h3 {
   margin-bottom: 0.375rem;
   color: #FFF;
 }
+@media (min-width: 992px) {
+  .banner p {
+    font-size: 1.625rem;
+  }
+}
 
 .banner::before {
   width: 100%;
   height: 100%;
   content: "";
   position: absolute;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.6);
   z-index: 1;
 }
 
@@ -269,6 +383,11 @@ h3 {
   text-align: center;
   position: relative;
   z-index: 2;
+}
+@media (min-width: 992px) {
+  .banner-text {
+    text-align: initial;
+  }
 }
 
 .banner-btn {
@@ -303,6 +422,11 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@media (min-width: 992px) {
+  .banner-text {
+    align-items: flex-start;
+  }
 }
 
 .our-services .section {
@@ -646,7 +770,7 @@ h3 {
 }
 .our-services-h1 {
   display: grid;
-  justify-self: end;
+  justify-self: center;
   grid-area: our-services-h1;
   white-space: nowrap;
 }
@@ -654,6 +778,7 @@ h3 {
   .our-services-h1 {
     display: initial;
     margin-bottom: 20px;
+    justify-self: end;
   }
 }
 
