--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -14,6 +14,7 @@ $colour-map: ( // Creates variables to be used in my map.
     hdr-btn-lines    : #FFF,
     nav-txt          : #FFF,
     nav-icon-hv      : #FFF,
+    nav-software-dd  : #526781,
     banner-txt       : #FFF,
     banner-btn-hvr   : #E80A42,
     os-btn-txt       : #FFF,
